# bookshelf

./: .dockerignore  .env.local  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  dump_-bookshelf-202309161147  launch_firefox.bat  models.py  postgresql  pyproject.toml  run.vbs  run_serveur.bat  start.bat
.devcontainer/: Dockerfile  devcontainer.json
Bibliotheque/: asgi.py  settings.py  urls.py  wsgi.py
bookshelv/: apps.py  form.py  models.py  test.json  tests.py  urls.py  utils.py  views.py
bookshelv/migrations/: 0001_initial.py  0002_adding_progression_field.py  0002_auto_20211016_1620.py
bookshelv/tests/: tests.py
data/db/: custom-format.sql  myfile.tar  postmaster.pid  save.dump  tarformat.sql
data/db/base/13444/: pg_internal.init
data/db/base/16384/: 1247  1249  1259  16393  16395  16398  16405  16409  16411  16416  16418  16423  16424  16426  16429  16431  16439  16440  16448  16451  16454  16456  16461  16462  16469  16478  16491  16495  16499  16501  16503  16507  16509  16513  16515  16517  16519  16521  16523  16525  (+48 more)
data/db/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
data/db/pg_stat_tmp/: db_0.stat  db_13444.stat  db_16384.stat  global.stat
static/: book_autocomplete.js  bootstrap-autocomplete.js  js_series.js  my_css.css  my_js.js  my_js2.js
templates/bookshelv/: add_book.html  add_book_form.html  author_details.html  author_list.html  best_author_bar_chart.html  books_by_language_by_year_chart.html  category_pie_chart.html  charting.html  description_book_template.html  display_authors_template.html  display_books_in_series.html  display_books_template.html  display_series.html  home_button.html  index.html  search.html  series_list.html  small_author_bar_chart.html  validation.html  wordcloud.html
