[tool.poetry]
name = "bibliotheque"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "Bibliotheque" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
psycopg2-binary = "^2.9.3"
loguru = "^0.6.0"
coverage = "^6.5.0"
bokeh = "^3.3.1"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
matplotlib = "^3.6.3"
nltk = "^3.8.1"
wordcloud = "^1.9.2"
djlint = "^1.34.1"
django-pandas = "^0.6.7"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"
mypy = "^1.15.0"
debugpy = "^1.8.12"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4" # not needed here as tests are done with django

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"*/tests/*.py" = ["S101", "PLR2004", "ANN201", "D102"]

[tool.pyright]
# disabling pylance as ruff is enabled
typeCheckingMode = "off"
ignore = ["*"]

[tool.mypy]
ignore_missing_imports = true
